--- a/_sass/_elements/_catmenu.scss
+++ b/_sass/_elements/_catmenu.scss
@@ -1,25 +1,8 @@
 .blog-cats {
     font-size: $base-font-size;
-    float: left;
-    margin-top: 75px;
-    padding: 5px;
-    background-color: #000000
-}
-
-@include if-device($wide-desktop) {
-    .cat-wrapper {
-        padding: 75px;
-        padding-bottom: 0px;
-    }
-
-    .blog-cats {
-	max-width: 790px;
-	margin: auto;
-	float: none;
-        position: relative;
-    }
+    background-color: $background-color;
 }
 
 .blog-cats h5 {
-    font-size: 26px;
+    font-size: $menu-font-size;
 }
