--- a/_sass/_layouts/_media.scss
+++ b/_sass/_layouts/_media.scss
@@ -1,4 +1,13 @@
-/* responsive videos */
+/* Media Layouts */
+
+img {
+  border: 0;
+  width: 70%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .video figure {
   position: relative;
   padding-bottom: 56.25%;
