--- a/_sass/_layouts/_postlists.scss
+++ b/_sass/_layouts/_postlists.scss
@@ -1,4 +1,4 @@
-/* Home styles */
+/* Post styles */
 /* ----------------------------------------------------------*/
 
 .home h1 { margin-bottom: 25px; }
@@ -7,18 +7,6 @@
 
 .posts li { margin-bottom: 30px; }
 
-.posts .post-link {
-  font-size: 24px;
-  letter-spacing: -1px;
-  line-height: 1;
-}
-
 .posts .post-date {
   display: block;
-  font-size: 15px;
-  color: #818181;
-}
-
-.pagination {
-
 }
