Fixing code snippet css

--- a/_sass/_elements/_codesnippets.scss
+++ b/_sass/_elements/_codesnippets.scss
@@ -1,6 +1,7 @@
 /* Code Tag */
 code {
-  color: $code-color;
+    background: $code-background;
+    color: $code-color;
 }
 
 /* Syntax highlighting styles */
