Making the lines  80 characters where possible. :smiling_imp:

--- a/_layouts/language.html
+++ b/_layouts/language.html
@@ -13,10 +13,10 @@ layout: default
 
         <img src="/res/shipit-code-club.png" alt="We need you!"/>
         <p>
-            Nobody has written the page for this yet!
-            Have you had any experience with language before? If so how about
-            <a href="/getinvolved.html">getting involved</a> and help us fix this by writing
-            a little something about your favourite language!
+            Nobody has written the page for this yet! Have you had any
+            experience with language before? If so how about
+            <a href="/getinvolved.html">getting involved</a> and help us fix
+            this by writing a little something about your favourite language!
         </p>
 
         {% else %}
@@ -33,10 +33,10 @@ layout: default
 
 {% if getstarted_tutorials.size == 0 %}
         <p>
-            There haven't been any getting started tutorials written for this yet!
-            Have you had any experience with language before? If so how about
-            <a href="/getinvolved.html">getting involved</a> and help us fix this by contributing
-            a guide for others to follow!
+            There haven't been any getting started tutorials written for this
+            yet! Have you had any experience with language before? If so how
+            about <a href="/getinvolved.html">getting involved</a> and help us
+            fix this by contributing a guide for others to follow!
         </p>
         <ul>
             {{getstarted_tutorials}}
@@ -44,8 +44,8 @@ layout: default
 
 {% else %}
         <p>
-            Like what you see here and want to give it a go? Below is a list of tutorials
-            on how to get started with {{page.title}}:
+            Like what you see here and want to give it a go? Below is a list of
+            tutorials on how to get started with {{page.title}}:
         </p>
         <ul>
             {{getstarted_tutorials}}
@@ -59,14 +59,14 @@ layout: default
         <p>
             There haven't been any tutorials written for this yet!
             Have you had any experience with language before? If so how about
-            <a href="/getinvolved.html">getting involved</a> and help us fix this by contributing
-            a guide for others to follow!
+            <a href="/getinvolved.html">getting involved</a> and help us fix
+            this by contributing a guide for others to follow!
         </p>
 
   {% else %}
 
-  Here are some tutorials demonstrating some more advanced features/libraries/tools
-  for {{page.title}}:
+  Here are some tutorials demonstrating some more advanced
+  features/libraries/tools for {{page.title}}:
 
   <ul>
       {{lang_tutorials}}
