--- a/_sass/_layouts/_base.scss
+++ b/_sass/_layouts/_base.scss
@@ -182,17 +182,25 @@ select {
 /* Page Content */
 
 .page-content {
-  padding-top: 75px;
-  padding-bottom: 150px;
+  padding: 75px 0;
+}
+
+@media screen and (min-width: 750px){
+    .page-content {
+      padding-top: 75px;
+      padding-bottom: 150px;
+    }
 }
 
 /* Site footer */
 
-.site-footer {
-  padding: 30px 0;
-  width: 100%;
-  position: fixed;
-  bottom: 0;
+@media screen and (min-width: 750px){
+    .site-footer {
+      padding: 30px 0;
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+    }
 }
 
 .footer-heading {
