making the past sessions background the -ve one

--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@ $meta-color: #818181;
 $background-color: #000000;
 
 $background-url: url(../res/backround_images/background.png);
+$past-background-url: url(../res/backround_images/background-negative.png);
 $quote-border-style: 4px solid #e8e8e8;
 
 // Syntax Highlighting
@@ -52,4 +53,3 @@ $mobile: 600px;
         "_elements/post",
         "_elements/postlists",
         "_elements/sessions"
-            
