--- a/_includes/common_head.html
+++ b/_includes/common_head.html
@@ -23,6 +23,5 @@
     <link id="theme-def" rel="stylesheet" href="/css/main.css">
 
     <script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
-    <script src="{{ "/js/jquery.flexnav.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-    <script src="{{ "/js/theme-changer.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-    <link href="{{ "/css/flexnav.css" | prepend: site.baseurl }}" media="screen, projection" rel="stylesheet" type="text/css">
+    <script src="/js/menu.js" type="text/javascript"></script>
+    <script src="/js/theme-changer.js" type="text/javascript"></script>
