--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,25 +1,15 @@
 <header class="site-header">
 
   <div class="wrap">
-    <div class="menu-button">Menu</div>
     <nav>
-    <ul data-breakpoint="800" class="flexnav">
-    {% for i in site.data.menu %}
-        <li><a class="page-link" href="{{ i.url | prepend: site.baseurl }}">{{ i.text }}</a>
-            {% if i.subitems %}<ul>{% for j in i.subitems %}
-                <li> <a class="page-link" href="{{ j.url | prepend: site.baseurl }}">{{ j.text }}</a>
-                    {% if j.subitems %}<ul>{% for k in j.subitems %}
-                        <li><a class="page-link" href="{{ k.url | prepend: site.baseurl }}">{{ k.text }}</a></li>
-                    {% endfor %}</ul>{% endif %}
-                </li>
-            {% endfor %}</ul>{% endif %}
-        </li>
-    {% endfor %}
-    </ul>
+        <ul id="menu">
+            <li class="menu-name">Menu</li>
+        {% for i in site.data.menu %}
+            <li class="menu-item">
+                <a href="{{ i.url | prepend: site.baseurl }}">{{ i.text }}</a>
+            </li>
+        {% endfor %}
+        </ul>
     </nav>
-
-    <script type="text/javascript">
-    $(".flexnav").flexNav();
-    </script>
   </div>
 </header>
