--- a/_sass/_elements/_base.scss
+++ b/_sass/_elements/_base.scss
@@ -64,29 +64,54 @@ h4 {
 
 }
 
+@media screen and (max-width: $desktop) {
+    .site-header {
+        background-color: transparent;
+        border-bottom: none;
+    }
+
+    nav {
+        background-color: $background-color;
+    }
+
+    nav > ul > li {
+        border-left: none;
+        border-bottom: $menu-border-style;
+    }
+
+}
+
+nav > ul {
+    list-style: none;
+}
+
+nav > ul > li {
+    border-left: $menu-border-style;
+}
+
+.menu-item > a {
+    color: $text-color;
+
+    &:visited {
+        color: $text-color;
+
+        &:visited {
+            color: $text-color;
+        }
+    }
+
+    &:hover {
+        color: $text-color;
+        text-style: underline;
+    }
+}
+
 .site-title {
   &:hover,
   &:visited {
     font-size: $menu-font-size;
     color: #333
   }
-}
-
-.site-nav {
-  .page-link {
-    color: #727272;
-  }
-}
-
-.quote {
-  color: orangered;
-  text-align: center;
-}
-
-.slicknav_menutxt {
-  color: #22ff00;
-  font-size: 2em;
-  vertical-align: center;
 }
 
 .site-footer {
