--- a/_sass/_layouts/_base.scss
+++ b/_sass/_layouts/_base.scss
@@ -64,10 +64,16 @@ select {
 /* Site header */
 
 .site-header {
-  main-height: 56px;
   width: 100%;
   position:fixed;
   z-index: 999;
+}
+
+@media screen and (max-width: $desktop) {
+    .site-header {
+        position: relative;
+        z-index: auto;
+    } 
 }
 
 .site-title {
@@ -81,24 +87,27 @@ select {
   }
 }
 
-.site-nav {
-  float: right;
-  line-height: 56px;
+ul#menu{
 
-
-  .menu-icon {
-    display: none;
+    @include column-count(5);
+    
+  li {
+   padding-top: 5px;
+   padding-bottom: 5px;
+   padding-left: 10px;
   }
+}
 
-  .page-link {
-    margin-left: 20px;
-  }
+@include if-device($desktop) {
+    ul#menu {
+        @include column-count(1);
+    }
 }
 
 /* media queries */
 /* ----------------------------------------------------------*/
 
-@media screen and (max-width: 750px) {
+@include if-device($desktop) {
 
   .footer-col-1 { width: 50%; }
 
@@ -117,52 +126,9 @@ select {
     clear: both;
   }
 
-
-  .site-header {
-    position:absolute;
-  }
 }
 
-@media screen and (max-width: 600px) {
-
-  .site-nav {
-    position: fixed;
-    z-index: 10;
-    top: 14px; right: 8px;
-    background-color: white;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    border: 1px solid #e8e8e8;
-  }
-
-  .site-nav .menu-icon {
-    display: block;
-    font-size: 24px;
-    color: #505050;
-    float: right;
-    width: 36px;
-    text-align: center;
-    line-height: 36px;
-  }
-
-  .site-nav .menu-icon svg { width: 18px; height: 16px; }
-
-  .site-nav .trigger {
-    clear: both;
-    margin-bottom: 5px;
-    display: none;
-  }
-
-  .site-nav:hover .trigger { display: block; }
-
-  .site-nav .page-link {
-    display: block;
-    text-align: right;
-    line-height: 1.25;
-    padding: 5px 10px;
-    margin: 0;
-  }
+@include if-device($mobile) {
 
   .post-header h1 { font-size: 36px; }
   .post-content h2 { font-size: 28px; }
@@ -182,19 +148,20 @@ select {
 /* Page Content */
 
 .page-content {
-  padding: 75px 0;
+  padding-top: 75px;
+  padding-bottom: 150px; 
 }
 
-@media screen and (min-width: 750px){
+@media screen and (max-width: $desktop) {
     .page-content {
-      padding-top: 75px;
-      padding-bottom: 150px;
+        padding-top: 50px;
+        padding-bottom: 150px;
     }
-}
+} 
 
 /* Site footer */
 
-@media screen and (min-width: 750px){
+@media screen and (min-width: $desktop) {
     .site-footer {
       padding: 30px 0;
       width: 100%;
