--- a/css/todo.scss
+++ b/css/todo.scss
@@ -36,41 +36,12 @@ $desktop: $content-width;
 $wide-desktop: 1260px;
 $mobile: 600px;
 
-/**
- * This is a mixin, it's basically a function which will return css.
-
-   This one tests to see what the size of the display is and whatever css
-   we contain within it when we "call" it will be activated if the device
-   is satisfied
- */
-@mixin if-device($device) {
-  @media screen and (max-width: $device) {
-    @content;
-  }
-}
-
-@mixin column-count($n) {
-    -webkit-column-count: $n;
-       -moz-column-count: $n;
-            column-count: $n;
-}
-
-@mixin border-radius($radius...) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-          border-radius: $radius;
-}
-
-
 @import
+        "_layouts/mixins",
         "_layouts/base",
         "_layouts/catmenu",
-        "_layouts/media",
         "_layouts/post",
         "_layouts/postlists",
+        "_layouts/sessions",
+        "_layouts/media"
 
-        "_elements/base",
-        "_elements/catmenu",
-        "_elements/codesnippets",
-        "_elements/post",
-        "_elements/postlists"
