--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,7 @@ $background-color: #000000;
 $background-url: url(../res/backround_images/background.png);
 $past-background-url: url(../res/backround_images/background-negative.png);
 $quote-border-style: 4px solid #e8e8e8;
+$menu-border-style: 1px solid $link-color;
 
 // Syntax Highlighting
 $code-color: #000000;
