--- a/_includes/project_link.html
+++ b/_includes/project_link.html
@@ -1,5 +1,5 @@
     <li>
     <p><b>{{project.name}}</b></p>
     <p><i>{{project.description}}</i></p>
-    <p><a href="/projects/{{project.tag}}.html">More info</a></p>
+    <p><a href="{{project.url}}">More info</a></p>
     </li>
