Fixing geraints theme

--- a/css/yellow.scss
+++ b/css/yellow.scss
@@ -47,10 +47,9 @@ $mobile: 600px;
         "_layouts/sessions",
         "_layouts/media",
 
-        "_elements/base",
-        "_elements/catmenu",
-        "_elements/codesnippets",
-        "_elements/post",
-        "_elements/postlists",
-        "_elements/sessions"
-            
+        "_main/base",
+        "_main/catmenu",
+        "_main/codesnippets",
+        "_main/post",
+        "_main/postlists",
+        "_main/sessions"
