--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@ $meta-color: #818181;
 $background-color: #000000;
 
 $background-url: url(../res/backround_images/background.png);
+$past-background-url: url(../res/backround_images/background-negative.png);
 $quote-border-style: 4px solid #e8e8e8;
 $menu-border-style: 1px solid $link-color;
 
@@ -39,4 +40,3 @@ $code-border-style: 1px solid #d5d5e9;
         "_main/post",
         "_main/postlists",
         "_main/sessions"
-            
