Changed for the yellow theme. :smiling_imp:

--- a/css/yellow.scss
+++ b/css/yellow.scss
@@ -16,6 +16,7 @@ $meta-color: #ff9900;
 $background-color: #ffff1a;
 
 $background-url: url(../res/backround_images/background.png);
+$past-background-url: url(../res/backround_images/background.png);
 $quote-border-style: 4px solid #e8e8e8;
 $menu-border-style: 1px solid $link-color;
 
