--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,6 +7,7 @@ $mobile: 600px;
 @import
         "_layouts/mixins",
         "_layouts/base",
+        "_layouts/landingpage",
         "_layouts/catmenu",
         "_layouts/post",
         "_layouts/postlists",
