--- a/css/main.scss
+++ b/css/main.scss
@@ -35,6 +35,7 @@ $code-border-style: 1px solid #d5d5e9;
         "_layout",
 
         "_main/base",
+        "_main/landingpage",
         "_main/catmenu",
         "_main/codesnippets",
         "_main/post",
