Editing yellow theme as per @alcarney's advice :smiling_imp:

--- a/css/yellow.scss
+++ b/css/yellow.scss
@@ -40,14 +40,8 @@ $mobile: 600px;
 
 
 @import
-        "_layouts/mixins",
-        "_layouts/base",
-        "_layouts/catmenu",
-        "_layouts/post",
-        "_layouts/postlists",
-        "_layouts/sessions",
-        "_layouts/media",
-
+        "_layout",
+        
         "_main/base",
         "_main/catmenu",
         "_main/codesnippets",
