--- a/css/matrix.scss
+++ b/css/matrix.scss
@@ -41,11 +41,11 @@ $mobile: 600px;
 @import
         "_layout",
 
-        "_matrix/landingpage",
+        "_themes/_matrix/landingpage",
 
-        "_main/base",
-        "_main/catmenu",
-        "_main/codesnippets",
-        "_main/post",
-        "_main/postlists",
-        "_main/sessions"
+        "_themes/_main/base",
+        "_themes/_main/catmenu",
+        "_themes/_main/codesnippets",
+        "_themes/_main/post",
+        "_themes/_main/postlists",
+        "_themes/_main/sessions"
