Fixing invisible menus on mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header class="site-header">
 
   <div class="wrap">
-      {% include menu.html %}
+      <nav>
+          {% include menu.html %}
+      </nav>
   </div>
 </header>
