--- a/css/inverted.scss
+++ b/css/inverted.scss
@@ -42,6 +42,7 @@ $mobile: 600px;
         "_layout",
 
         "_main/base",
+        "_main/landingpage",
         "_main/catmenu",
         "_main/codesnippets",
         "_main/post",
