Fix yellow theme

--- a/css/yellow.scss
+++ b/css/yellow.scss
@@ -41,8 +41,9 @@ $mobile: 600px;
 
 @import
         "_layout",
-        
+
         "_main/base",
+        "_main/landingpage",
         "_main/catmenu",
         "_main/codesnippets",
         "_main/post",
