Moving codesnippets to styles
If you have ever looked inside the `codesnippets.scss` file you will
have noticed it is rather complicated and for people new to css etc. it
would be rather intimidating...

To combat this there is a new `_styles` directory in the `_sass` folder
which now contains `codesnippets.scss`. The whole point of this and the
`_styles` directory in general is to provide easy to tweak styling for
various parts of the site.

The `codesnippets.scss` file basically depends on a number of `code-*`
variables which need to be defined in a theme's main `.scss` file when it
is imported. That way by setting a few colours as variables, people who
use this style can easily adjust how code snippets are displayed on the
site to their liking.

This PR also converts all existing themes to use the "new" codesnippets
style.

There may be additional styles added in the future for various aspects
of the site.

--- a/_sass/_styles/_codesnippets.scss
+++ b/_sass/_styles/_codesnippets.scss
@@ -1,3 +1,38 @@
+/**
+    This style is used to set the colours for any code snippets on the website
+    to use it you simply have to define a few variables in your theme's main .scss
+    file in the css folder and import this file.
+
+    It defines the following variables:
+
+        - code-border-style: This sets how the border is drawn around the box
+                             which contains code snippets.
+
+        - code-background:   This affects the background colour of the box which
+                             contains code snippets
+
+        - code-comment:      This sets the colour of any comments included in the
+                             code snippet e.g. # A comment in python
+
+        - code-string:       This sets the colour of any string literals in the code
+                             snippet e.g. "Hello World!"
+
+        - code-numeral:      This sets the colour of any numbers in the code e.g. 10, 0x8a, etc
+
+        - code-variable:     This sets the colour of any variables recognised by the rouge
+                             syntax highlighter
+
+        - code-function:     This sets the colour of any function recognosed by the rouge
+                             syntax highlighter e.g. print, sum etc.
+
+        - code-type:         The sets the colour of any types in the code recognised by the
+                             syntax highlighter. e.g. string, bool, int etc.
+
+        - code-color:        This sets the colour of any text not affected by any of
+                             the other syntax rules above.
+*/
+
+
 /* Code Tag */
 code {
     background: $code-background;
