--- a/css/inverted.scss
+++ b/css/inverted.scss
@@ -41,10 +41,11 @@ $mobile: 600px;
 @import
         "_layout",
 
+        "_styles/codesnippets",
+
         "_themes/_main/base",
         "_themes/_main/landingpage",
         "_themes/_main/catmenu",
-        "_themes/_main/codesnippets",
         "_themes/_main/post",
         "_themes/_main/postlists",
         "_themes/_main/sessions"
