--- a/css/main.scss
+++ b/css/main.scss
@@ -34,10 +34,11 @@ $code-border-style: 1px solid #d5d5e9;
 @import
         "_layout",
 
+        "_styles/codesnippets",
+
         "_themes/_main/base",
         "_themes/_main/landingpage",
         "_themes/_main/catmenu",
-        "_themes/_main/codesnippets",
         "_themes/_main/post",
         "_themes/_main/postlists",
         "_themes/_main/sessions"
