Making the visited links visible. :smiling_imp:

--- a/css/matrix.scss
+++ b/css/matrix.scss
@@ -11,7 +11,7 @@ $menu-font-size: 26px;
 $base-font-size: 16px;
 
 $text-color: #34b605;
-$link-color: #141a94;
+$link-color: #000cff;
 $meta-color: #818181;
 $background-color: #000000;
 
