--- a/_sass/_layouts/_landingpage.scss
+++ b/_sass/_layouts/_landingpage.scss
@@ -20,6 +20,15 @@ article.landing {
 
     .reason {
         padding: 25px;
+        p { 
+            padding-bottom: 20px;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+        h2 {
+            padding-left: 10px;
+        }
     }
 
     .image {
