Minor template tweaks
- Both on the category menu and the category page titles the category name
  is now capitalised

- Tweaked the info line below post titles so that it includes a link to
  the category that the post has been posted in.

--- a/_layouts/catpage.html
+++ b/_layouts/catpage.html
@@ -14,7 +14,7 @@
 	    <div class="main">
 
 	    <header class="post-header">
-		<h1>Category: {{ page.category }}</h1>
+		<h1>Category: {{ page.category | capitalize}}</h1>
 	    </header>
 
 	    <article class="post-content">
