--- a/_includes/catmenu.html
+++ b/_includes/catmenu.html
@@ -8,7 +8,7 @@
      <ul>
      {% assign catlist = site.categories | sort %}
      {% for cat in catlist %}
-         <li><a href="/blog/{{cat | first}}.html">{{cat | first}}</a> ({{cat[1] | size}})</li>
+         <li><a href="/blog/{{cat | first}}.html">{{cat | first | capitalize>}}</a> ({{cat[1] | size}})</li>
      {% endfor %}
      </ul>
 </div>
