--- a/_includes/post_link.html
+++ b/_includes/post_link.html
@@ -3,7 +3,8 @@
           <a class="post-link" href="{{post.url}}">{{ post.title }}</a>
         </h4>
         <span class="post-date">
-	  <p>{{ post.date | date: "%b %-d, %y" }}, Written by {{post.author}}</p>
+	          <p> Written by {{post.author}}.
+                Published {{ post.date | date: "%b %-d, %Y" }}{% if post.categories %}, in <a href="/blog/{{post.categories[0]}}">{{post.categories[0] | capitalize}}</a>{% endif %}</p>
 	</span>
         {{ post.excerpt }}
       </li>
