--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,8 @@ layout: default
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <p class="meta">{% if page.author %}Written by  {{ page.author }}. {% endif %} 
+        Published {{ page.date | date: "%b %-d, %Y" }}{% if page.categories %}, in <a href="/blog/{{page.categories[0]}}.html">{{page.categories[0] | capitalize}}</a>{% endif %}</p>
   </header>
 
   <article class="post-content">
