Adding Cardiff Red Theme
I'm not very inventive with names, so since I use quite a bit of red in
this theme I am calling it "Cardiff Red"

This is my first stab at a theme and I think I will be tweaking it for
quite a while yet!

--- a/_sass/_styles/_codesnippets.scss
+++ b/_sass/_styles/_codesnippets.scss
@@ -78,7 +78,7 @@ code {
 .highlight .ne { color: $code-function; font-weight: bold } /* Name.Exception */
 .highlight .nf { color: $code-function; font-weight: bold } /* Name.Function */
 .highlight .nn { color: $code-type; } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
+.highlight .nt { color: $code-type } /* Name.Tag */
 .highlight .nv { color: $code-variable; } /* Name.Variable */
 .highlight .ow { font-weight: bold } /* Operator.Word */
 .highlight .w { color: #bbbbbb } /* Text.Whitespace */
