Tweaks to cardiff red theme
- Adding support for past sessions
- Make the code club logo look like a badge

--- a/_sass/_themes/_cardiffred/_landing.scss
+++ b/_sass/_themes/_cardiffred/_landing.scss
@@ -5,6 +5,25 @@ header.landing {
         @include border-radius($corner-radius);
     }
 
+    h1 {
+        margin-bottom: 10px;
+        text-shadow: $text-shadow-style;
+    }
+
+    img {
+        margin-bottom: 10px;
+        @include box-style(lighten($middle-bg, 10%));
+        @include border-radius(50%);
+    }
+
+    nav {
+        margin-top: 10px;
+    }
+
+    .menu-name {
+        color: $cardiff-red;
+    }
+
     .menu-item,
     .menu-name {
         list-style: none;
@@ -20,6 +39,9 @@ article.landing {
     .reason {
         h2 {
             padding-bottom: 5px;
+            margin-bottom: 10px;
+            text-shadow: $text-shadow-style;
+            @include box-style(lighten($middle-bg, 10%));
         }
     }
 }
