--- a/css/cardiffred.scss
+++ b/css/cardiffred.scss
@@ -7,7 +7,7 @@
 $black: #000000;
 $white: #ffffff;
 $bluish: #00e5ee;
-$cardiff-red: #cc0000;
+$cardiff-red: #ff0000;
 $cardiff-complement: #111;
 
 // Text
@@ -52,7 +52,8 @@ $code-border-style: solid 1px $white ;
         "_themes/_cardiffred/_base",
         "_themes/_cardiffred/_landing",
         "_themes/_cardiffred/_catmenu",
-        "_themes/_cardiffred/_posts.scss"
+        "_themes/_cardiffred/_posts",
+        "_themes/_cardiffred/_sessions.scss"
 
 
           
