Refactoring blog layouts
- `_layouts/catpage.html` is no more, it has been incorporated into
  `_layouts/blog.html`.
- This means it will be easier to keep the blog consistent since changes
  to one layout will affect the whole blog not just the categories/main
  blog
- The blog template no checks for `title:` in the YAML frontmatter of
  pages using the blog layout. If found it assumes it's the main blog
  page and lists all posts
- If it finds `category` in the frontmatter then it assumes it's a
  category page and lists posts in `category` instead.

This change should not affect the outward appearence of the site at all.

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,35 +2,50 @@
 <html>
 
   {% include common_head.html %}
-
-    <body>
+<body id="blog">
 
     {% include header.html %}
     {% include catmenu.html %}
 
-
     <div class="page-content">
-      <div class="wrap">
-	<div class="post">
-	    <div class="main">
+     <div class="wrap">
+      <div class="post">
+       <div class="main">
 
-	    <header class="post-header">
-		<h1>{{ page.title }}</h1>
-	    </header>
+           <header class="post-header">
+               {% if page.title %}
+		             <h1>{{ page.title }}</h1>
+               {% endif %}
 
-	    <article class="post-content">
-	    {{ content }}
-	    </article>
-	    </div>
+               {% if page.category %}
+                 <h1>{{ page.category | capitalize }}</h1>
+               {% endif %}
+           </header>
 
-	</div>
+	         <article class="post-content">
+               <ul class="posts">
+                   {% if page.title %}
+                     {% for post in paginator.posts %}
+                        {% include post_link.html %}
+                     {% endfor %}
+                   {% endif %}
 
-	{% include pagination_nav.html %}
-
+                   {% if page.category %}
+                     {% for post in site.categories[page.category] %}
+                        {% include post_link.html %}
+                     {% endfor %}
+                   {% endif %}
+               </ul>
+	         </article>
+	     </div>
       </div>
+
+      {% if page.title %}
+        {% include pagination_nav.html %}
+      {% endif %}
+
+     </div>
     </div>
-
     {% include footer.html %}
-
-    </body>
+</body>
 </html>
