Making it the mobile site hopefully nice again

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,7 +13,7 @@ layout: default
       <h3>About</h3>
 
       <ul>
-	<li>Project Home: <a href="{{page.github}}">{{page.github}}</a></li>
+	<li>Project Home: <a href="{{page.github}}">{{page.gitshow}}</a></li>
 	{% if page.link %}
 	<li>Documentation: <a href="{{page.link}}">{{page.link}}</a></li>
 	{% endif %}
