making theme more readable

--- a/css/pink.scss
+++ b/css/pink.scss
@@ -10,8 +10,8 @@ $title-font-size: 42px;
 $menu-font-size: 26px;
 $base-font-size: 16px;
 
-$text-color: #f200ff;
-$link-color: #ff33fd;
+$text-color: #000000;
+$link-color: #a222a1;
 $meta-color: #f200ff;
 $background-color: #ff19fd;
 
