--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $base-font-size: 16px;
 $text-color: #ffffff;
 $link-color: #fbff00;
 $meta-color: #818181;
-$background-color: #00ff00;
+$background-color: #000000;
 
 $background-url: url(../res/backround_images/background.png);
 $past-background-url: url(../res/backround_images/background-negative.png);
