--- a/css/inverted.scss
+++ b/css/inverted.scss
@@ -10,6 +10,7 @@ $title-font-size: 42px;
 $menu-font-size: 26px;
 $base-font-size: 16px;
 
+$foot-text: #828282;
 $text-color: #000000;
 $link-color: #0400FF;
 $meta-color: #7E7E7E;
