--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@ $title-font-size: 42px;
 $menu-font-size: 26px;
 $base-font-size: 16px;
 
+$foot-text: #828282;
 $text-color: #ffffff;
 $link-color: #fbff00;
 $meta-color: #818181;
