Editing matrix scss

--- a/css/matrix.scss
+++ b/css/matrix.scss
@@ -10,6 +10,7 @@ $title-font-size: 42px;
 $menu-font-size: 26px;
 $base-font-size: 16px;
 
+$foot-text: #828282;
 $text-color: #34b605;
 $link-color: #000cff;
 $meta-color: #818181;
