--- a/css/pink.scss
+++ b/css/pink.scss
@@ -10,6 +10,7 @@ $title-font-size: 42px;
 $menu-font-size: 26px;
 $base-font-size: 16px;
 
+$foot-text: #828282;
 $text-color: #000000;
 $link-color: #a222a1;
 $meta-color: #f200ff;
