editing Geriants theme

--- a/css/yellow.scss
+++ b/css/yellow.scss
@@ -10,6 +10,7 @@ $title-font-size: 42px;
 $menu-font-size: 26px;
 $base-font-size: 16px;
 
+$foot-text: #828282;
 $text-color: #ff9900;
 $link-color: #99ff33;
 $meta-color: #ff9900;
