fixing red theme

--- a/css/red.scss
+++ b/css/red.scss
@@ -10,7 +10,7 @@ $title-font-size: 42px;
 $menu-font-size: 26px;
 $base-font-size: 16px;
 
-$text-foot: #828282;
+$foot-text: #828282;
 $text-color: #000000;
 $link-color: #ffffff;
 $meta-color: #383434;
