--- a/_includes/common_head.html
+++ b/_includes/common_head.html
@@ -20,7 +20,7 @@
     </script>
 
     <!-- Custom CSS -->
-    <link id="theme-def" rel="stylesheet" href="/css/main.css">
+    <link id="theme-def" rel="stylesheet" href="/css/cardiffred.css">
 
     <script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
     <script src="/js/menu.js" type="text/javascript"></script>
