Fixing mobile twitter and adding logo
- This (hopfully I had to guess the numbers) the mobile layout for the
  twitter feed. The easiest thing to do was to reduce the height of the
  twitter accross all devices but I don't think it's a bad compromise

- Replaced the word "Twitter" with the actual logo.

  There are actually two logos, one white (in use on cardiff red) and a
  blue one. This is so theme makers hopefully hava a choice for a logo
  which fits their theme the best, now by default both are visible.
  Theme makers will have to disable the icon they don't want in their
  theme.

  If you want the **white** icon then add the following CSS to your
  theme:
  ```
  .sidetab > .blue {
     display: none;
  }
  ```

  If you want the **blue** icon, then add the following CSS to your
  theme:
  ```
  .sidetab > .white {
    display: none;
  }
  ```

--- a/_includes/twitter_feed.html
+++ b/_includes/twitter_feed.html
@@ -1,5 +1,10 @@
 <div class="sidetab">
-    <h3>Twitter</h3>
+    <img src="/res/twitter_logo.png" alt="Twitter Logo"
+         align="middle"
+         class="twitlogo white""/>
+    <img src="/res/twitter_logo_blue.png" alt="Twitter Logo"
+         align="middle"
+         class="twitlogo blue"/>
 </div>
 
 <div class="tweets">
