--- a/_includes/twitter_feed.html
+++ b/_includes/twitter_feed.html
@@ -1,10 +1,6 @@
 <div class="sidetab">
-    <img src="/res/twitter_logo.png" alt="Twitter Logo"
-         align="middle"
-         class="twitlogo white""/>
-    <img src="/res/twitter_logo_blue.png" alt="Twitter Logo"
-         align="middle"
-         class="twitlogo blue"/>
+    <img src="/res/twitter_logo.png" alt="Twitter Logo" class="twitlogo white"/>
+    <img src="/res/twitter_logo_blue.png" alt="Twitter Logo" class="twitlogo blue"/>
 </div>
 
 <div class="tweets">
@@ -13,4 +9,6 @@
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
 </div>
+
+
           
