--- a/_includes/twitter_feed.html
+++ b/_includes/twitter_feed.html
@@ -4,11 +4,18 @@
 </div>
 
 <div class="tweets">
-    <div class="feed">
-        <a class="twitter-timeline"  href="https://twitter.com/cardiffmathcode" data-widget-id="729091854722056194">Tweets by @cardiffmathcode</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <div class="feed light">
+        <span class="dark">
+            <a class="twitter-timeline"  href="https://twitter.com/cardiffmathcode" data-widget-id="730463167378276353">Tweets by @cardiffmathcode</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </span>
+        <span class="light">
+            <a class="twitter-timeline"  href="https://twitter.com/cardiffmathcode" data-widget-id="729091854722056194">Tweets by @cardiffmathcode</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </span>
     </div>
 </div>
 
 
+          
           
