Themes are now sorted in the dropdown
This tweaks the footer template so that theme names in the dropdown are
now sorted alphabetically.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,10 +18,13 @@
 
     <div class="column footer-col-3">
       <p>Change Theme:</p>
+
+      {% assign themes = site.data.themes | sort: 'name' %}
+
       <select id="theme-chooser">
-        {% for theme in site.data.themes %}
-	    <option value="{{theme.shortname}}">{{theme.name}}</option>
-	{% endfor %}
+        {% for theme in themes %}
+            <option value="{{theme.shortname}}">{{theme.name}}</option>
+        {% endfor %}
       </select>
     </div>
 
