Updating menu tag gets rid of rand bullet point :smiling_imp:

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,8 +2,8 @@
         <ul id="menu">
             <li class="menu-name">Menu</li>
         {% for i in site.data.menu %}
-            <li class="menu-item">
+            <div class="menu-item">
                 <a href="{{ i.url | prepend: site.baseurl }}">{{ i.text }}</a>
-            </li>
+            </div>
         {% endfor %}
         </ul>
